--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,6 +50,9 @@ jobs:
           name: dist-files
           path: dist
   deploy:
+    permissions:
+      id-token: write
+      contents: read
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -62,6 +65,11 @@ jobs:
           path: ./dist
       - name: Output contents
         run: ls
+      - name: Get AWS permission
+        uses: aws-action/configure-aws-credentials
+        with:
+          role-to-assume: arn:aws:iam::020697060985:role/GitHubDemo1
+          region: eu-central-1
       - name: Deploy site
         id: deploy
         uses: ./.github/actions/deploy-s3-docker
@@ -69,7 +77,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         with:
-          bucket: gha-custom-action-hosting-krokos
+          bucket: gha-security-hosting-demo-krokos
           dist-folder: ./dist
           bucket-region: eu-central-1
       - name: Output information
