--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Output contents
         run: ls
       - name: Get AWS permission
-        uses: aws-action/configure-aws-credentials
+        uses: aws-action/configure-aws-credentials@v1
         with:
           role-to-assume: arn:aws:iam::020697060985:role/GitHubDemo1
           region: eu-central-1
